--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-sockets": "^7.3",
+        "predis/predis": "^1.1",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
